
	* eev-load.el: added a "(require 'eev-template0)".

	* eev-wrap.el (ee-template00, ee-template0): deleted - moved to
	the file eev-template0.el.

	* eev-brxxx.el: made this file compatible with lexical binding.
	Made the argument `f' explicit in many functions and moved the
	functionality of `ee-tail-call' into the functions
	`ee-code-brurl-rest' and ee-code-brfile-rest'.

	* eev-beginner.el (load-path): uncommented the "(add-to-list
	'load-path default-directory)"

2019-03-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el: made this file compatible with lexical binding.
	(code-c-d): made the arguments `c' and `d' explicit.
	(ee-code-c-d): made the arguments `c' and `d' explicit.
	(ee-tail-call): made the arguments `c' and `d' explicit.
	(ee-code-c-d-rest): made the arguments `c' and `d' explicit.
	(find-code-c-d-rest): made the arguments `c' and `d' explicit.
	(ee-code-c-d-:info): made the arguments `c' and `d' explicit.
	(ee-code-c-d-:linfo): made the arguments `c' and `d' explicit.
	(ee-code-c-d-:gz): made the arguments `c' and `d' explicit.
	(ee-code-c-d-:anchor): made the arguments `c' and `d' explicit.
	(ee-code-c-d-:wget): made the arguments `c' and `d' explicit.
	(ee-code-c-d-:grep): made the arguments `c' and `d' explicit.

2019-03-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el: added pointers to the discussion in the eev mailing
	list that generated the first version of eepitch.

2019-03-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* README: new file - a README for the ELPA package.

	* eev-pkg.el ("eev"): added several fields.

2019-03-13  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rcirc.el: updated the comments.

	* eev-beginner.el: don't change the load-path. Added comments.
	(eev-beginner): new function.

	* eev-intro.el (find-channels-intro): added some sections.

	* eev-channels.el: converted to UTF-8 and added comments.

2019-03-10  Eduardo Ochs  <eduardoochs@gmail.com>
